2005-03-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Added more functionality and bug fixes to JesusEdit.
	* It's now possible to create new buildings. The interface and the classes are a bit rough though. There's also no way to save the blueprints.

2005-03-01  Erik Hjortsberg  <erik@katastrof.nu>

	* silly bug, now fixed

2005-03-01  Erik Hjortsberg  <erik@katastrof.nu>

	* Added ability to use different MousePickers
	* Allow the user to select ModelBlocks. The selected block will be highlighted, and the attach points shown.
	* Added widget for editing Carpenter.

2005-02-27  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved Ember specific stuff of Carpenter into Jesus.
	* Added Adapters to Carpenter. 
	* Added a first prototype house. Need to change the way the floors and walls are attached to allow for rounded corners etc.

2005-02-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Change name of main exec to "ember"
	* Initial checking of Carpenter library which would allow dynamic constructions of buildings. This is very much in a protoyping stage right now. Later on the library will be separated from Ember.
	* Changes to adapt to the fact that OgreCEGUIRenderer now resides in the Ogre lib.
	* Better handling of terrain pages, to avoid getting segfault with empty mercator segments

2005-02-15  Erik Hjortsberg  <erik@katastrof.nu>

	* Added fragment shader for terrain. I temporarely removed the old splatting method (using many passes), but I have to add that back in in order to provide a fallback for people without shader support.

2005-02-13  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved to OGRE 1.0 and CEGUI 0.2.
	* Improved terrain LOD calculations. Though it still needs a lot of tweaking.

2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>

	* Don't include invalid mercator segments in terrainpage LOD calculations.
	* Always show the tile that the camera is on in full detail.

2005-02-12  Erik Hjortsberg  <erik@katastrof.nu>
