@@ -53,7 +53,6 @@ namespace EmberOgre {
 
 GUIManager::GUIManager(Ogre::RenderWindow* window, Ogre::SceneManager* sceneMgr) 
 : mWindow(window)
-, mKeyListener(0)
 
 {
 
@@ -67,8 +66,8 @@ GUIManager::GUIManager(Ogre::RenderWindow* window, Ogre::SceneManager* sceneMgr)
 	
 		fprintf(stdout, "STARTING CEGUI\n");
 		
-		mGuiRenderer = new CEGUI::OgreCEGUIRenderer(window, Ogre::RENDER_QUEUE_OVERLAY, false, 3000, sceneMgr);
-		mGuiRenderer->setTargetSceneManager(sceneMgr);
+		mGuiRenderer = new CEGUI::OgreCEGUIRenderer(window, Ogre::RENDER_QUEUE_OVERLAY, false, 0, sceneMgr);
+		//mGuiRenderer->setTargetSceneManager(sceneMgr);
 		mGuiSystem = new CEGUI::System(mGuiRenderer); 
 		
 		mWindowManager = &CEGUI::WindowManager::getSingleton();
